# latentoptim

./: .gitignore  README.md  factorial.ipynb  pyproject.toml  setup.py
examples/: genetic_optimization.py  run_ga.ipynb  train_model.ipynb
examples/ga_examples/: shape.py  vae_dim.py
examples/vae_examples/: research.py  shapes.pkl  test_matrix.csv  train_vae.ipynb
examples/vae_examples/colab/: colab_example.ipynb  test_log.csv  test_matrix.csv
examples/vae_examples/colab/example_model/: vae_epoch_0_mse1634.3.pt  vae_epoch_100_mse192.4.pt  vae_epoch_20_mse284.6.pt  vae_epoch_40_mse360.7.pt  vae_epoch_60_mse187.0.pt  vae_epoch_80_mse183.5.pt
latentoptim/: pyproject.toml
latentoptim/data/: __init__.py  generator.py  shape.py  training_data.ipynb
latentoptim/ga/: __init__.py  ga.py  individual.py  population.py  shapepool.py
latentoptim/vae/: __init__.py  data.py  metrics.py  model.py  predictor.py  trainer.py
utils/: __init__.py  research.py  shape.py  vae_dim.py
vae/: metrics.py  model.py
