[project]
name = "vae"
version = "0.0.0"
description = "Geometry Representation"
authors = [
    { name = "Josh Hellewell", email = "jhellewell1722@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "torch",
    "Cython<3",
    "pyga @ git+https://github.com/mark-hobbs/pyga.git"
]

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"